# PiWatch-embeddedSystems

./: .gitignore  Data.ini  Dockerfile  DockerfileRos  NewNewListener.py  VigilationDetectionAlert.py  alternative_r.py  config.py  detect.py  docker-compose-BBDD-Backend.yml  listener.py  main.py  model.py  movimiento-Ult.py  package-lock.json  pg_hba.conf  postgresql.conf  r-movimiento.py  requirements.txt  robot.py  send_video.py  testmodel.py  vamos por partes.py
Futuros nodos del catkin_ws (no tocar)/src/: CMakeLists.txt
Futuros nodos del catkin_ws (no tocar)/src/model_pkg/: CMakeLists.txt
Futuros nodos del catkin_ws (no tocar)/src/model_pkg/scripts/: model.py
Futuros nodos del catkin_ws (no tocar)/src/my_robot_control/scripts/: movement.py
bdd/: piwatch_insert.sql  piwatch_structure.sql
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/src/model/: CMakeLists.txt  package.xml
catkin_ws_old/devel/: .catkin  local_setup.sh
catkin_ws_old/src/empotrados/: CMakeLists.txt  package.xml
db/scripts/: 1_piwatch_structure.sql  2_piwatch_insert.sql
piWatch/: index.html  package-lock.json  package.json
piWatch-alertBOT/: tokenGen.py
piWatch-api/: main.py
piWatch/src/components/: CalendarComponent.vue  HelloWorld.vue  IncidentComponent.vue  IncidentContainer.vue  Login.vue  LoginAttemptComponent.vue  LoginAttemptContainer.vue  Register.vue  scheduleContainer.vue
piWatch/src/layouts/default/: AppBar.vue  Default.vue
piWatch/src/router/: index.js
piWatch/src/views/: homeView.vue  incidentView.vue  loginAttemptView.vue  loginView.vue  registerView.vue
